--- a/src/app/pages/login-page/login-page.html
+++ b/src/app/pages/login-page/login-page.html
@@ -1,1 +1,25 @@
-<p>login-page works!</p>
+<div>
+    <form (ngSubmit)="login(loginForm)" #loginForm="ngForm">
+        <div>
+            <label for="email" class="visually-hidden">Email</label>
+            <input type="email" id="email" name="email" placeholder="Email" ngModel required #email="ngModel">
+        </div>
+        <div>
+            <label for="password" class="visually-hidden">Contraseña</label>
+            <input type="password" id="password" name="password" placeholder="Contraseña" ngModel required
+                #password="ngModel">
+        </div>
+        @if((!email.pristine && email.invalid) || (!password.pristine && password.invalid)){
+            <p class="error">Email o contraseña invalido.</p>
+            }
+        <div class="spinner">
+            @if (backRequest) {
+                
+            }
+        </div>
+            @if (error) {
+                <p class="error">Datos incorrectos, intente nuevamente.</p>
+            }
+        <button [disabled]="loginForm.invalid || backRequest">Acceder</button>
+    </form>
+</div>
