--- a/src/app/pages/register-page/register-page.html
+++ b/src/app/pages/register-page/register-page.html
@@ -1,1 +1,42 @@
-<p>register-page works!</p>
+<div>
+    <form (ngSubmit)="register(registerForm)" #registerForm="ngForm">
+        <div>
+            <label for="name">Nombre*</label>
+            <input type="text" name="name" id="name" placeholder="Nombre*" ngModel required="true" maxlength="50"
+                #name="ngModel" autocomplete="name">
+        </div>
+        <div>
+            <label for="email">Email*</label>
+            <input name="email" id="email" type="email" placeholder="Email*" ngModel #email="ngModel" required="true"
+                autocomplete="email" pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$">
+        </div>
+        <div>
+            <label for="password">Contraseña*</label>
+            <input name="password" id="password" type="password" placeholder="Contraseña* (min. 4 caracteres)" ngModel
+                #password="ngModel" autocomplete="new-password" required="true" minlength="4">
+        </div>
+        <div>
+            <label for="password2">Repetir Contraseña*</label>
+            <input name="password2" id="password2" type="password" placeholder="Repetir contraseña*" ngModel
+                #password2="ngModel" autocomplete="new-password" required="true">
+        </div>
+        @if (
+        (!name.pristine && name.invalid) ||
+        (!email.pristine && email.invalid) ||
+        (!password.pristine && password.invalid) ||
+        (!password2.pristine && password2.invalid)) {
+        <p class="error">* Completar campos obligatorios.</p>
+        }
+        @if (errorPasswords) {
+        <p class="error">Las contraseñas no coinciden.</p>
+        }
+        <div class="spinner">
+            @if (backRequest) {
+            }
+        </div>
+            @if (errorService) {
+                <p class="error">Error indeterminado, intente nuevamente.</p>
+            }
+        <button [disabled]="registerForm.invalid || backRequest">Crear cuenta</button>
+    </form>
+</div>
